--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <main>
             
                 <form>
-                    
-                    <input type="text" id="digitar-texto" class="input-texto" required placeholder="Digite seu texto">
+                    <textarea name="" id="digitar-texto" class="input-texto" cols="30" rows="10" required placeholder="Digite seu texto"></textarea>
                 </form>
 
                 <p class="aviso"> <img src="./img/ponto-interrog.png" alt="ponto de interrogação"> Apenas letras minúsculas e sem acento.</p>
