--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <footer>
        <p>&#169; Copyright - Codificador de Texto Alura</p>
-       <p>Desenvolvido por <a href="">Maria Clara Nunes</a></p>
+       <p>Desenvolvido por <a href="https://github.com/mcnunesm">Maria Clara Nunes</a></p>
     </footer>
 
     <script type="text/javascript" src="./js/index.js"></script>
