Alteração texto index

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 
                 <section id="nenhuma-entrada">
                     <img src="./img/figura-lateral.png" alt="um garoto segurando uma lupa" class="imagem-lupa">
-                    <p class="texto-1">Nenhuma mensagem encontrada</p>
+                    <p class="texto-1">Nenhuma mensagem encontrada.</p>
                     <p class="texto-2">Digite um texto que você deseja criptografar ou descripgotrafar.</p>
              </section>
             </div>
